<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.jack.edit.ExtendedEditText
            android:id="@+id/default_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_split_mode"
            android:inputType="phone" />
        <!--切勿设置maxLength属性-->

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="#1976d2" />

        <com.jack.edit.ExtendedEditText
            android:id="@+id/custom_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/custom_split_mode"
            android:inputType="number" />
        <!-- 如果inputType="number" 的话是没法插入非数字字符的，
        所以在初始化时已经强行转为inputType="phone"-->

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="#1976d2" />

        <Button
            android:id="@+id/show_pattern_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="分割13800000000"
            tools:ignore="HardcodedText" />

        <com.jack.edit.ExtendedEditText
            android:id="@+id/show_separator_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auto_split_mode" />

        <com.jack.edit.ExtendedEditText
            android:id="@+id/custom_marker_edit_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableEnd="@drawable/icon_tips"
            android:gravity="center_vertical"
            android:hint="@string/custom_marker_show_after_input" />

        <com.jack.edit.ExtendedEditText
            android:id="@+id/custom_marker_edit_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/icon_tips"
            android:gravity="center_vertical"
            android:hint="@string/custom_marker_show_before_input"
            app:customizeMarkerEnable="true"
            app:showMarkerTime="before_input" />

        <com.jack.edit.ExtendedEditText
            android:id="@+id/custom_marker_edit_text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/icon_tips"
            android:gravity="center_vertical"
            android:hint="@string/custom_marker_always_show"
            app:customizeMarkerEnable="true"
            app:showMarkerTime="always" />

        <com.jack.edit.ExtendedEditText
            android:id="@+id/ios_style_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_corner_gray_bg"
            android:drawableStart="@drawable/icon_search"
            android:hint="@string/search"
            app:iOSStyleEnable="true" />
    </LinearLayout>

</ScrollView>